--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="grid">
+    <div class="container">
+        <div class="grid">
         
+        </div>
     </div>
 </body>
 </html>
