--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <div class="grid">
         
         </div>
+        <div class="settings">
+            <!--Color button will eventually
+            be a menu-->
+            <button>Canvas Size</button>
+            <button>Color</button>
+            <button>Pen</button>
+            <button>Erase</button>
+            <button>Clear</button>
+        </div>
     </div>
 </body>
 </html>
