Add function to clear button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button>Color</button>
             <button>Pen</button>
             <button>Erase</button>
-            <button>Clear</button>
+            <button id="clear">Clear</button>
         </div>
     </div>
 </body>
