Add functionality for pen and erase buttons

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             be a menu-->
             <button>Canvas Size</button>
             <button>Color</button>
-            <button>Pen</button>
-            <button>Erase</button>
+            <button id="pen">Pen</button>
+            <button id="erase">Erase</button>
             <button id="clear">Clear</button>
         </div>
     </div>
