--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!--Color button will eventually
             be a menu-->
             <button>Canvas Size</button>
-            <button>Color</button>
+            <input id="color" type="color" default="#000">
             <button id="pen">Pen</button>
             <button id="erase">Erase</button>
             <button id="clear">Clear</button>
