Add slider for canvas size and style settings

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                     <input id="background" type="color" default="#FEF7F8">
                 </div>
             </div>
+            <div class="slide-container">
+                <p><span id=value></span> X <span id=value></span></p>
+                <input type="range" min="2" max="64" value="16" class="slider">
+            </div>
             <div class="other-settings">
-                <button>Canvas Size</button>
                 <button id="pen">Pen</button>
                 <button id="erase">Erase</button>
                 <button id="clear">Clear</button>
