--- a/index.html
+++ b/index.html
@@ -17,24 +17,28 @@
         <div class="settings">
             <!--Color button will eventually
             be a menu-->
-            <div class="colors">
-                <div>
-                    <p>Color:</p>
-                    <input id="color" type="color" default="#000">
+            <div>
+                <div class="colors">
+                    <div>
+                        <p>Color:</p>
+                        <input id="color" type="color" value="#000" />
+                    </div>
+                    <div>
+                        <p>Background:</p>
+                        <input id="background" type="color" value="#FEF7F8" />
+                    </div>
                 </div>
-                <div>
-                    <p>Background:</p>
-                    <input id="background" type="color" default="#FEF7F8">
+                <div class="slide-container">
+                    <p><span id=value></span> X <span id=value></span></p>
+                    <input type="range" min="2" max="100" value="16" class="slider">
                 </div>
-            </div>
-            <div class="slide-container">
-                <p><span id=value></span> X <span id=value></span></p>
-                <input type="range" min="2" max="100" value="16" class="slider">
             </div>
             <div class="other-settings">
                 <button id="pen">Pen</button>
                 <button id="erase">Erase</button>
                 <button id="clear">Clear</button>
+                <button id="rainbow">Rainbow</button>
+                <button id="shader">Shader</button>
             </div>
             
         </div>
