--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </div>
             
         </div>
+        <div class="footer">
+            <a href="https://github.com/NHemmerly" target="_blank">
+                <span>Find me on Github!</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
